<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projeto02</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="abrir_browser">Abrir Browser</string>
    <string name="fazer_ligacao">Fazer Ligacao</string>
    <string name="visualizar_contato">Visualizar Contato</string>
    <string name="listar_contatos">Listar Contatos</string>

</resources>
